# triz-2afc-agent-framework

./: .env.example  .gitignore  AGENTS.md  CASEBASE_EXPANSION.md  DESIGN.md  README.md  casebase.json  casebase_factorial_pilot12.json  casebase_p10.json  casebase_p5.json  casebase_pc_mouse.json  casebase_uspatents.json  config.yaml  main.py  pyproject.toml
prompts/: judge_expert.txt  judge_naive.txt  judge_user.txt  triz_system.txt  user_template.txt
prompts/factorial/: E_TRIZ_OFF.txt  P_L_TRIZ_OFF.txt  P_L_TRIZ_ON.txt
prompts/p40/: T_OFF.txt  T_ON.txt  T_ON_ALL40.txt  T_ON_P01.txt  T_ON_P02.txt  T_ON_P03.txt  T_ON_P04.txt  T_ON_P05.txt  T_ON_P06.txt  T_ON_P07.txt  T_ON_P08.txt  T_ON_P09.txt  T_ON_P10.txt  T_ON_P11.txt  T_ON_P12.txt  T_ON_P13.txt  T_ON_P14.txt  T_ON_P15.txt  T_ON_P16.txt  T_ON_P17.txt  T_ON_P18.txt  T_ON_P19.txt  T_ON_P20.txt  T_ON_P21.txt  T_ON_P22.txt  T_ON_P23.txt  T_ON_P24.txt  T_ON_P25.txt  T_ON_P26.txt  T_ON_P27.txt  T_ON_P28.txt  T_ON_P29.txt  T_ON_P30.txt  T_ON_P31.txt  T_ON_P32.txt  T_ON_P33.txt  T_ON_P34.txt  T_ON_P35.txt  T_ON_P36.txt  T_ON_P37.txt  (+3 more)
report/: 02_main_study_results.md  04_p40_review_860_outputs.csv  05_exhaust_chains_160_rounds.csv  05_exhaust_chains_readable.md  README.md
results/exhaust_boot/: boot_compare.json  chains.md
scripts/: build_p40_prompts.py  build_pairs.py  ci_power_analysis.py  exhaust_run.py  export_boot_compare.py  export_p40_review.py  extract_p40_attachment.py  validate_casebase.py
src/: factorial_report.py  generate.py  judge.py  judge_charts.py  judge_report.py  probe_models.py  report.py
(+57 files in other folders)
